Fixed a visual layout bug

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -137,7 +137,7 @@ body {
                 height: 80%;
                 position: absolute;
                 bottom: 0;
-                left: 0;
+                left: 2px;
                 background-color: var(--color-3);
             }
 
